--- a/1017.Rmd
+++ b/1017.Rmd
@@ -5,8 +5,13 @@ output: html_notebook
 ```{r}
 library(readr)
 filmVotingData <- read_csv("https://raw.githubusercontent.com/tpemartin/course-107-1-programming-for-data-science/master/data/%E7%AC%AC%E4%B8%89%E5%B1%86%E7%B6%93%E6%BF%9F%E6%92%AD%E5%AE%A2%E7%AB%B6%E8%B3%BD%E5%8F%83%E8%B3%BD%E4%BD%9C%E5%93%81%E6%8A%95%E7%A5%A8%E7%B5%90%E6%9E%9C%E6%A8%A3%E6%9C%AC%20-%20Sheet1.csv")
+library(googlesheets)
+gs_auth(new_user = TRUE)
 ```
 
+```{r}
+
+```
 
 ```
 
@@ -22,4 +27,8 @@ str_c(b)->c
 c
 table(b)
 bAAA
+library(googlesheets)
+gs_auth(new_user = TRUE)
+
+
 ```
